IaC/frontend/co-frontend-concilia/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: co-ccrcs-frontend-concilia
  namespace: ccrcs-genai-dev
  labels:
    app: co-ccrcs-frontend-concilia
    app.kubernetes.io/component: co-ccrcs-frontend-concilia
    app.kubernetes.io/instance: co-ccrcs-frontend-concilia
    app.kubernetes.io/name: co-ccrcs-frontend-concilia
    app.kubernetes.io/part-of: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: co-ccrcs-frontend-concilia
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: co-ccrcs-frontend-concilia
        deployment: co-ccrcs-frontend-concilia
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      containers:
        - name: co-ccrcs-frontend-concilia
          image: 'artifactory.globaldevtools.bbva.com:443/co-genai-public-cloud-docker-local/ccrcs-genai/co-ccrcs-frontend-concilia@sha256:bc2a4a8ffd20871871e1a92eda39765124c90161d88c21235d88adf4a0f0893c'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources: {}
          # Montamos carpetas temporales para que Nginx no lance "Permission denied"
          volumeMounts:
            - name: tmp-run
              mountPath: /run
            - name: tmp-cache
              mountPath: /var/cache/nginx
            - name: tmp-log
              mountPath: /var/log/nginx
      # Volúmenes en memoria efímeros con permisos de escritura
      volumes:
        - name: tmp-run
          emptyDir: {}
        - name: tmp-cache
          emptyDir: {}
        - name: tmp-log
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: co-ccrcs-frontend-concilia
  namespace: ccrcs-genai-dev
  labels:
    app: co-ccrcs-frontend-concilia
    app.kubernetes.io/component: co-ccrcs-frontend-concilia
    app.kubernetes.io/instance: co-ccrcs-frontend-concilia
    app.kubernetes.io/name: co-ccrcs-frontend-concilia
    app.kubernetes.io/part-of: frontend
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  selector:
    app: co-ccrcs-frontend-concilia
    deployment: co-ccrcs-frontend-concilia
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
