IaC/frontend/co-frontend-concilia/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: co-frontend-concilia
  labels:
    app: co-frontend-concilia
    app.kubernetes.io/name: co-frontend-concilia
    app.kubernetes.io/part-of: frontend
spec:
  selector:
    app: co-frontend-concilia
  ports:
    - name: http
      port: 8080
      targetPort: http
