IaC/frontend/co-frontend-concilia/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: co-ccrcs-frontend-concilia
  namespace: ccrcs-genai-dev
  labels:
    app: co-ccrcs-frontend-concilia
    app.kubernetes.io/component: co-ccrcs-frontend-concilia
    app.kubernetes.io/instance: co-ccrcs-frontend-concilia
    app.kubernetes.io/name: co-ccrcs-frontend-concilia
    app.kubernetes.io/part-of: frontend
    app.openshift.io/runtime-version: v2
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  to:
    kind: Service
    name: co-ccrcs-frontend-concilia
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
